Updated review unit tests